--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,10 @@
         <td> حسن علي حسن محمد </td><td> <img src="Hassan.jpeg" width="100" height="100"> </td> <td> 01275229138 </td> <td><a href="mailto: emanomerhasn@gmail.com"> emanomerhasn@gmail.com </a> </td>
     </tr>
     <tr>
-        <td> فيروز محمد حسن حامد </td><td> <img src="Fayrouz Mohamed.jpg" width="100" height="100"> </td><td>  01550323682 </td><td><a href=" mailto: fayrouzmhassan@gmail.com"> fayrouzmhassan@gmail.com </a> </td>
+        <td> فيروز محمد حسن حامد </td><td> <img src="fayrouz.jpg" width="100" height="100"> </td><td>  01550323682 </td><td><a href=" mailto: fayrouzmhassan@gmail.com"> fayrouzmhassan@gmail.com </a> </td>
+    </tr>
+    <tr>
+        <td> محمد حمدى حلمى السيد </td><td> <img src="Mohamed Hamdey.jpg" width="100" height="100"> </td><td>  01225466697 </td><td><a href=" mailto: emanomerhasona@gmail.com"> emanomerhasona@gmail.com </a> </td>
     </tr>
     </table>
     <style>
