--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Smart Trash.css">
 </head>
 <body>
+   
     <!-- The sidebar -->
 <!-- Load an icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,6 +20,7 @@
   <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
   <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
  <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
+ <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
   <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
 </div>
 <div class="main">
@@ -28,7 +30,7 @@
 </center>
 
     <br>
-    <h1> رؤية مصر 2030 بخصوص اللبيئة</h1>
+    <h1> رؤية مصر 2030 بخصوص البيئة</h1>
     <p>بحلول عام 2030 يكون البعد البيئي محوراً أساسياً في كافة القطاعات التنموية والاقتصادية بشكل يحقق+ أمن الموارد الطبيعية ويدعم عدالة استخدامها والاستغلال الأمثل لها والاستثمار فيها وبما يضمن حقوق الأجيال القادمة فيها، ويعمل على تنويع مصادر الإنتاج والأنشطة الاقتصادية، ومما يساهم في دعم التنافسية، وتوفير فرص عمل جديدة، والقضاء على الفقر، ويحقق عدالة اجتماعية مع توفير بيئة نظيفة وصحية وآمنة للمواطن المصري.</p>
         <br>
         <h1> الاهداف الاستراتيجية</h1>
