--- a/Recycling.html
+++ b/Recycling.html
@@ -16,13 +16,14 @@
     <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
     <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
     <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
+    <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
     <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
   </div>
   <div class="main">
     <h1>تدوير النفايات</h1>
     <p>عملية تدوير النفايات: هي عملية استخدام واستعادة وإعادة معالجة مواد النفايات والمخلفات سواء المنزلية، أو الصناعية، أو الزراعية، بهدف تقليل أثرها واستخدامها في الصناعات والمنتجات المختلفة من جديد، كما أنها تعد مجموعة من العمليات المترابطة ببعضها البعض، حيث تبدأ بتجميع المخلّفات التي يمكن تدويرها ومن ثم فرزها بناءً على نوعها (زجاج، أو ورق، أو خشب، أو معدن، إلخ...) لتصبح مواد خام صالحة للتصنيع والاستخدام، وتتمثّل المراحل الأساسية في عملية إعادة التدوير في جمع مواد النفايات وتجهيزها تصنيعها ومعالجتها، وتشمل المواد المعاد تدويرها الحديد، والصلب، وعلب الألومنيوم، والزجاج، والورق، والخشب، وبقايا مواد البناء وغيرها من المواد، وتعد المواد المستخدمة في عملية إعادة التدوير بمثابة بدائل للمواد الخام التي تم الحصول عليها من الموارد الطبيعية غير المتجددة مثل البترول، والغاز الطبيعي، والفحم الحجري، والخامات المعدنية، والأشجار. وقد نشأت فكرة إعادة التدوير خلال الحرب العالمية الأولى والثانية عندما عانت الدول المشاركة في الحرب من نقص شديد في بعض المواد الأساسية مثل الحديد والمطاط وغيرها، حيث قامت بعض الدول نتيجة لذلك بجمع هذه المواد وإعادة استخدامها من جديد، ومع مرور الوقت أصبحت عملية إعادة تدوير النفايات من أهم الأساليب المتبعة للتخلص من النفايات نظراً لتأثيرها الإيجابي على البيئة والاقتصاد الوطني وصحة الإنسان
     </p>
-    <center><img src="recyle.jpeg" ></center>
+    <center><img src="recyle.jpeg" > <br><img src="c1.jpg"></center>
     <h1> الدول الرائدة في تدوير النفايات</h1>
     <p class="recycling">
 
@@ -34,6 +35,7 @@
           وهي شركة استشارية بيئية تتخذ من بريستول مقراً
            لها، كانت أكبر ثلاث دول هي ألمانيا (56٪) والنمسا (54٪) وكوريا الجنوبية (54٪).  . </p>
           <center> <img src="D59whKiXkAEN6pu.jpg" width="1000px" height="600px">
+            
            </center>
     <h1> فوائد اعادة التدوير </h1>
 
