--- a/conference.html
+++ b/conference.html
@@ -18,6 +18,7 @@
   <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
   <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
  <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
+ <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
   <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
 </div>
 <div class="main">
