--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
     <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
     <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
+    <a href="Food 2030.html"><i class="fa fa-fw fa-envelope"></i> Food 2030</a>
     <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
     <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
   </div>
