--- a/abstract.html
+++ b/abstract.html
@@ -19,6 +19,7 @@
   <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
   <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
  <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
+ <a href="Sustainable development.html"><i class="fa fa-fw fa-user"></i> Sustainable development </a>  
  <a href="Food 2030.html"><i class="fa fa-fw fa-envelope"></i> Food 2030</a>
  <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
   <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
@@ -75,12 +76,16 @@
             ،البادج الفضى = 20 نقاط ،البادج الذهبى = 30 نقاط،وهناك عجلة الحظ
             يمكن استخدامها مره واحده يوميا لاضافة نقاط .</p>
             <br> 
-
-<img src="s1.PNG" alt="">
+<center>
+<img src="s1.PNG" alt="" height="377px">
 <img src="s2.PNG">
 <img src="s3.PNG" alt="">
-<img src="s4.PNG" alt="" width="">
-<h1> لينك التطبيق - mobile aplication link </h1>
+<h1> Business Model </h1>
+<img src="Busines model.jpg" alt="" width="1100px">
+</center>
+<p> بدء المشروع كشركة ناشئة ليس من الصعب مطلقا ممكن البدء فى المناطق ذات الدخل المرتفع لتحقيق عوائد اقتصادية تخدم ونمول التوسع فى المناطق ذات الدخل المتوسط والمنخفض .
+    مشكلتنا (الهدف) هي الحفاظ على البيئة من ناحية ، لوقف تفاقم التلوث الذي يؤدي إلى تغيرات مناخية قاسية تضر بأرضنا ، ومن ناحية أخرى ، تعظيم الاستفادة من الموارد المحلية المتاحة ، أطنان من النفايات مثل لم يعد يمثل مشكلة للمجتمع ، بل أصبح يمثل إضافة إلى القيمة الاقتصادية. </p>
+<h1> لينك التطبيق - Mobile Application link </h1>
 <p> يمكنك تحميل التطبيق من خلال الينك </p>
 <a href="https://drive.google.com/file/d/1WJXgR4RbCM8KuQclYgUnfeEcBzwtSLv2/view?usp=sharing">Smart Trash Fighting Garbage mafia</a>
 
