--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
   <a href="abstract.html"><i class="fa fa-fw fa-wrench"></i> abstract</a>
   <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
   <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
- <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
- <a href="Food 2030.html"><i class="fa fa-fw fa-envelope"></i> Food 2030</a>
- <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
+  <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
+  <a href="Sustainable development.html"><i class="fa fa-fw fa-user"></i> Sustainable development </a>  
+  <a href="Food 2030.html"><i class="fa fa-fw fa-envelope"></i> Food 2030</a>
+  <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
   <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
 
 </div>
@@ -44,7 +45,14 @@
         صون التنوع البيولوجي المتميز في مصر ورفع كفاءة إدارته عن طريق المحميات الطبيعية بما يضمن لهذا التنوع البيولوجي الاستمرارية والاستدامة.
         تنفيذ مصر لإلتزاماتها الدولية والإقليمية تجاه الاتفاقيات البيئية ووضع الآليات اللازمة لذلك مع ضمان توافقها مع السياسات المحلية
         ضمان إلتزام مصر باتفاقياتها البيئية الدولية والإقليمية ووضع الآليات اللازمة لذلك مع ضمان توافقها مع السياسات البيئية..</p>
-            <br> 
+            <br>
+            <h1> سلة المهملات الذكية تواكب خطة مصر 2030 </h1>
+            <p> خطة ورؤية مصر 2030 تهدف الى استخدام امثل لموارد الطاقة المحلية. وتعد مشاريع إعادة تدوير النفايات في مصر جزءًا من الجهود الاقتصادية والبيئية ، لذا فكرنا في مشروع سلة المهملات الزكية QR code تشجع المصريين على فكرة فصل النفايات من المنبع ، فالقمامة المصرية من أغنى أنواع القمامة العالمية وفقا للاحصاءات العالمية حيث إنها مليئة بالمواد العضوية بسبب إلقاء المصريين ما يزيد على ٣٠٪ من بقايا الغذاء مما سيسهم فى إنتاج ١٤ مليون طن من الأسمدة العضوية تكفي لزراعة ٢ مليون فدان جديد من المشروعات القومية الواعدة. مما يجعا للمشروع عائد بيئى واقتصادى على نفس المستوى 
+                <br>
+                و للمشروع اثر بيئي حيث ان الادارة النظيفة للمخلفات يحقق الهدف المستدام ( الصحة الجيدة والرفاهية)والحد من التلوث البيئى الناجم من المخلفات بانواعها والمتسبب الرئيسى فى التغيرات المناخية المتفاقمة لان المخلفات تؤثر على المناخ، حيث أكدت الأبحاث أنها تصدر 10%، من غازات الاحتباس الحراري، مثل ثانى أكسيد الكربون، والميثان، وذلك نتيجة لتعرض بعضها للحرق  ،ويمكن أن تلوث مقالب القمامة مياه الشرب إذا لم تكن مبنية على نحو سليم. وتوجد مخاطر مهنية في مرافق التخلص من المخلفات التي لا تصمم أو تدار أو تتم صيانتها بشكل جيد. يتم حرق المخلفات على نطاق واسع، ولكن حرقها على نحو غير ملائم أو حرق المواد غير الملائمة يتسبب في إطلاق الملوثات في الهواء وإطلاق بقايا الرماد
+                ومشروعنا يحقق التخلص الامن من المخلفات والستفادة الاقنصادية من عمليات اعادة التدوير كما توصي منظمة الصحة العالمية بتنفيذ سياسات للحد من تلوث الهواء وتدعمه، بما في ذلك إدارة النفايات بشكلٍ أفضل
+                يتم وضع مستشعر الوزن    weight sensorبأسفل السلة حسب السعة التي يحتملها ويتم ربطة ب 4 HX711 Load Cell Amplifier
+                عن طريق دائرة لترجمة الوزن الى الاردوينو والذي تم برمجته بكود يعطى إشارة للموتور بالتحرك 90 درجة ومع الوزن الأكبر 180 درجة ليعطى الباركود المكافئ للوزن ويعطى فترة سماح محدده في الكود  تتيح للعميل القيام بمسح الباركود بالهاتف ويمكن تطوير السلة بتزويدها بشاشة لعرض الوزن  و ترتبط بتطبيق على الهاتف  لجمع النقاط  يعتمد على كمية النفايات التي تضعها في السلة الصحيحة ويتم التعرف عليها بواسطة الذكاء الاصطناعى  ( كانزات ' أوراق ' مخلفات عضوية, مخلفات صلبة  '......وغيرها ) وتوضع في حسابك ( الاكونت )الذى تنشأه  على التطبيق برقمك القومي وتحول الاوزان الى نقاط والنقاط الى أموال في رصيك او نقاط يمكن استبدالها بسلع عينية من الهايبرات الكبيرة  التي تتعاقد معها شركة النظافة . وتشجع السلال الذكية بالبار كود على زيادة كمية نفايات التدوير المفصولة  لتزيد من نقاطك وتتحول الى رصيد وبالتالي تزيد كميات النفايات الجاهزة لتغذية مصانع إعادة التدوير الرسمية في مصر وتغنيها عن الاستيراد ،ويعطى التطبيق مؤشرات غاية في الأهمية مثل أكثر الأماكن انتاجا للبلاستيك او الكانزات وهكذا يمكن زيادة وخفض الحاويات وفقا لهذه المؤشرات ويمكن التوسع في دراسة هذه المؤشرات مستقبليا لوضع خطط تطوير بيئية واجتماعية.، وتسقط  النفايات اسفل السلة في صندوق كبير تحت الأرض بمكبس  هيدروليكى لكبس النفايات ويحفظها بعيدا عن أيدى النباشين </p>
             
 
 
