--- a/Food 2030.html
+++ b/Food 2030.html
@@ -15,6 +15,7 @@
         <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
         <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
        <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
+       <a href="Sustainable development.html"><i class="fa fa-fw fa-user"></i> Sustainable development </a>  
        <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
         <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
       </div>
