--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,16 @@
     <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
     <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
     <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
+    <a href="Sustainable development.html"><i class="fa fa-fw fa-user"></i> Sustainable development </a>  
     <a href="Food 2030.html"><i class="fa fa-fw fa-envelope"></i> Food 2030</a>
     <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
     <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
   </div>
   <div class="main">
+    <center>   <h1> Contact us </h1> </center> 
+<p dir="ltr" style="color:brown;"> We would love to hear from you! Whether you have a question, suggestion, or simply want to share your experience with the team, please don't hesitate to reach out. 
+ <br>   We are here to support and celebrate your journey in making a difference. <br>
+  Contact us today and let your voice be heard! </p>
     <table>
         <th> الإسم </th><th> الصورة </th> <th> رقم الهاتف </th><th> الإيميل </th>
        
