--- a/Sustainable development.html
+++ b/Sustainable development.html
@@ -15,6 +15,7 @@
 <div class="sidebar">
   <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
   <a href="abstract.html"><i class="fa fa-fw fa-wrench"></i> abstract</a>
+  <a href="startup.html"><i class="fa fa-fw fa-wrench"></i> Our start up Business</a>
   <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
   <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
  <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
@@ -37,7 +38,28 @@
          . وتغطي أهداف التنمية
          المستدامة مجموعة واسعة من قضايا التنمية الاجتماعية والاقتصادية (الفقر – الجوع – الصحة – التعليم - 
          المناخ - المساواة بين الجنسين – المياه - الصرف الصحي – الطاقة – البيئة - العدالة الاجتماعية). </p>
-
+<h1>
+    اهداف التنمية المستدامة المتعلقة بالمشروع من ال 17 هدف
+</h1>
+    <p>
+        اولا القضاء على الفقر تحقق السله مصدر دخل وربح اضافي للمواطن<br>
+         ثانيا الاداره النظيفه للمخلفات يحقق هذا الهدف الصحه الجيده والرفاهيه<br>
+          ثالثا التعليم الجيد يستطيع الطالب من تحويل القمامه الى نقاط في حسابه الى دفع المصروفات الدراسيه واستكمال تعليمه<br>
+           رابعا المساواه بين الجنسين كلا الجنسين مطالب بالمحافظه على بيئته والمساهمه الفعليه في كل مبادره بيئيه<br>
+            خامسا العمل اللائق ونمو الاقتصاد تحقق المبادره عملا اضافيا للفرد ونمو الاقتصاد حيث تزيد من عائد عمليات اعاده التدوير الرسميه التي تصب في الدخل القومي<br>
+             سادسا الصناعه والابتكار والهياكل الاساسيه مصانع اعاده التدوير التي تلجا الان الى استيراد القمامه بسبب مافيا القمامه من النباشين ستنتعش بتوفير مخلفات جاهزه محليه
+             <br>
+              سابعا مدن ومجتمعات محليه مستدامه
+              <br> 
+            ثامنا العمل المناخي الحد من التلوث البيئي 
+            الناجم من المخلفات بانواعها والمتسبب الرئيسي في التغيرات المناخيه
+            <br>
+              تاسعا عقد الشراكات
+               لتحقيق الاهداف ستعقد عده شراكات بين مصانع اعاده التدوير وشركه اداره 
+              المخلفات الجاهزه للتدوير غير الشراكات مع الاجهزه الحكوميه لتحويل
+               النقاط الى مصروفات دراسيه او خدمات كهرباء ومياه وخلافه وكذلك شركات
+               مع الهايبر ماركت الكبير والصغير لاستبدال النقاط بكوبونات للشراء
+</p>
 
 
 
