--- a/abstract.html
+++ b/abstract.html
@@ -16,6 +16,7 @@
 <div class="sidebar">
   <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
   <a href="abstract.html"><i class="fa fa-fw fa-wrench"></i> abstract</a>
+  <a href="startup.html"><i class="fa fa-fw fa-wrench"></i> Our start up Business</a>
   <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
   <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
  <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
@@ -80,13 +81,9 @@
 <img src="s1.PNG" alt="" height="377px">
 <img src="s2.PNG">
 <img src="s3.PNG" alt="">
-<h1> Business Model </h1>
-<img src="Busines model.jpg" alt="" width="1100px">
-</center>
-<p> بدء المشروع كشركة ناشئة ليس من الصعب مطلقا ممكن البدء فى المناطق ذات الدخل المرتفع لتحقيق عوائد اقتصادية تخدم ونمول التوسع فى المناطق ذات الدخل المتوسط والمنخفض .
-    مشكلتنا (الهدف) هي الحفاظ على البيئة من ناحية ، لوقف تفاقم التلوث الذي يؤدي إلى تغيرات مناخية قاسية تضر بأرضنا ، ومن ناحية أخرى ، تعظيم الاستفادة من الموارد المحلية المتاحة ، أطنان من النفايات مثل لم يعد يمثل مشكلة للمجتمع ، بل أصبح يمثل إضافة إلى القيمة الاقتصادية. </p>
+</p>
 <h1> لينك التطبيق - Mobile Application link </h1>
-<p> يمكنك تحميل التطبيق من خلال الينك </p>
+<p> يمكنك تحميل التطبيق من خلال اللينك </p>
 <a href="https://drive.google.com/file/d/1WJXgR4RbCM8KuQclYgUnfeEcBzwtSLv2/view?usp=sharing">Smart Trash Fighting Garbage mafia</a>
 
 
