--- a/Food 2030.html
+++ b/Food 2030.html
@@ -18,6 +18,7 @@
        <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
        <a href="Sustainable development.html"><i class="fa fa-fw fa-user"></i> Sustainable development </a>  
        <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
+       <a href="survey.html"><i class="fa fa-fw fa-envelope"></i> Survey</a>
         <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
       </div>
       <div class="main">
