--- a/Recycling.html
+++ b/Recycling.html
@@ -11,13 +11,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- The sidebar -->
 <div class="sidebar">
-    <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="abstract.html"><i class="fa fa-fw fa-wrench"></i> abstract</a>
-    <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
-    <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
-    <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
-    <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
-    <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+  <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+  <a href="abstract.html"><i class="fa fa-fw fa-wrench"></i> abstract</a>
+  <a href="startup.html"><i class="fa fa-fw fa-wrench"></i> Our start up Business</a>
+  <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
+  <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
+ <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
+ <a href="Sustainable development.html"><i class="fa fa-fw fa-user"></i> Sustainable development </a>  
+ <a href="Food 2030.html"><i class="fa fa-fw fa-envelope"></i> Food 2030</a>
+ <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
+ <a href="survey.html"><i class="fa fa-fw fa-envelope"></i> Survey</a>
+  <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
   </div>
   <div class="main">
     <h1>تدوير النفايات</h1>
