--- a/Sustainable development.html
+++ b/Sustainable development.html
@@ -22,6 +22,7 @@
  <a href="Sustainable development.html"><i class="fa fa-fw fa-user"></i> Sustainable development </a>  
  <a href="Food 2030.html"><i class="fa fa-fw fa-envelope"></i> Food 2030</a>
  <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
+ <a href="survey.html"><i class="fa fa-fw fa-envelope"></i> Survey</a>
   <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
 
 </div>
