--- a/previous projects.html
+++ b/previous projects.html
@@ -17,8 +17,9 @@
     <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
     <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
     <a href="Food 2030.html"><i class="fa fa-fw fa-envelope"></i> Food 2030</a>
+    <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a> 
     <a href="test.html"><i class="fa fa-fw fa-envelope"></i> Test</a>
-    <a href="conference.html"><i class="fa fa-fw fa-user"></i> Conference </a>
+    <a href="survey.html"><i class="fa fa-fw fa-envelope"></i> Survey</a>
     <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
   </div>
   <div class="main">
