--- a/previous projects.html
+++ b/previous projects.html
@@ -44,16 +44,18 @@
   <video src="videoplayback.mp4" autoplay controls></video>
 </center>
 
-<h1> حلول إدارة النفايات التي تعتمد على البيانات </h1>
+<h1> حلول إدارة النفايات التي تعتمد على البيانات من شركة Ecube Labs </h1>
 <p> تنتج Ecube Labs حلولاً للإدارة الذكية للنفايات التي تساعد المدن وكذلك صناعة جمع النفايات للحد من التكاليف التشغيلية بنسبة تصل إلى 80٪. الخط المتكامل لمنتجاتنا يشمل:
 
     صندوق ضغط نفايات مزودة بالطاقة الشمسية
     جهاز استشعار لاسلكي لمستوى التعبئة مزود بالموجات فوق الصوتية
-    منصة مراقبة الوقت الحقيقي وتحليل البيانات </p>
+    منصة مراقبة الوقت الحقيقي وتحليل البيانات  </p>
+    <center>
     <a href="https://www.youtube.com/watch?v=THcgh8EP_xM" data-lity="">
-        <button class="btn btn-primary btn-lg pull-right" type="submit">
-            <i class="fa fa-play fa-fw" aria-hidden="true">
+        <button class="video" type="submit">
+            <i aria-hidden="true">
             </i>&nbsp; شاهد الفيديو</button></a>
+        </center>
 </button>
 </div>
 
