--- a/Recycling.html
+++ b/Recycling.html
@@ -55,14 +55,21 @@
       <li>  نظريا كل المواد قابلة للتحويل، ولكن اقتصاديا بعض أنواع التحويل تعتبر ذات مردود أقل، لذا لا يمكننا تحويل أي شيء فمثلا تكاليف تحويل المواد الإلكترونية مكلف جدا. وفي حالة عدم إمكانية استرجاع مادة من المواد، من الممكن استعمالها لإنتاج الطاقة بحرقها واستعمالها كوقود للتدفئة مثلا، كما يوجد إمكانية استخراج مادة غاز الميثان بواسطة عملية تحويل بعض المواد الغذائية وبعض الفضلات الموجود في محطات تنقية المياه.</li>
     </ol>
          </p>
+         <center><img src="c5.jpg" alt="" width="300" height="300"></center>
+
+<h1>نشر الوعى البيئى بأهمية الادارة الذكية للمخلفات</h1>
+<h1>Spreading environmental awareness of the importance of smart waste management</h1>
+<center>
+
+<a href="https://www.youtube.com/watch?v=5DfxPIt5djo" data-lity="">
+  <button class="video" type="submit">
+      <i aria-hidden="true">
+      </i>&nbsp; شاهد الفيديو</button></a>
+      <br>
+
+      <img src="c8.jpg" alt="">
+    </center>
+
         </div>
-
-
-
-
-
-
-
-
 </body>
 </html>
