--- a/abstract.html
+++ b/abstract.html
@@ -28,6 +28,11 @@
 </div>
 <div class="main">
 
+    <center>
+        <h1 class="st"><marquee> smart recycle bin company </marquee></h1>
+     <img src="c10.jpg" class="eg">
+ </center>
+
     <br>
     <h1> ملخص البحث </h1>
     <p>لم تعد أطنان المخلفات تمثل مشكلة للمجتمع بل لابد أن تصبح قيمة اقتصادية
