--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <div class="sidebar">
   <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
   <a href="abstract.html"><i class="fa fa-fw fa-wrench"></i> abstract</a>
+  <a href="startup.html"><i class="fa fa-fw fa-wrench"></i> Our start up Business</a>
   <a href="previous projects.html"><i class="fa fa-fw fa-wrench"></i> previous projects</a>
   <a href="Recycling.html"><i class="fa fa-fw fa-user"></i> Recycling</a>
   <a href="Sustainable development.html"><i class="fa fa-fw fa-user"></i> Sustainable development </a>  
@@ -29,7 +30,7 @@
 </div>
 <div class="main">
     <center>
-       <h1 class="st" ><marquee> Smart recycle bin fighting garbage mafia</marquee></h1>
+       <h1 class="st"><marquee> smart recycle bin company </marquee></h1>
     <img src="sdsegypt2030.jpg" class="eg">
 </center>
 
@@ -47,6 +48,7 @@
         تنفيذ مصر لإلتزاماتها الدولية والإقليمية تجاه الاتفاقيات البيئية ووضع الآليات اللازمة لذلك مع ضمان توافقها مع السياسات المحلية
         ضمان إلتزام مصر باتفاقياتها البيئية الدولية والإقليمية ووضع الآليات اللازمة لذلك مع ضمان توافقها مع السياسات البيئية..</p>
             <br>
+            <center><img src="c3.jpg" alt=""></center>
             <h1> سلة المهملات الذكية تواكب خطة مصر 2030 </h1>
             <p> خطة ورؤية مصر 2030 تهدف الى استخدام امثل لموارد الطاقة المحلية. وتعد مشاريع إعادة تدوير النفايات في مصر جزءًا من الجهود الاقتصادية والبيئية ، لذا فكرنا في مشروع سلة المهملات الزكية QR code تشجع المصريين على فكرة فصل النفايات من المنبع ، فالقمامة المصرية من أغنى أنواع القمامة العالمية وفقا للاحصاءات العالمية حيث إنها مليئة بالمواد العضوية بسبب إلقاء المصريين ما يزيد على ٣٠٪ من بقايا الغذاء مما سيسهم فى إنتاج ١٤ مليون طن من الأسمدة العضوية تكفي لزراعة ٢ مليون فدان جديد من المشروعات القومية الواعدة. مما يجعا للمشروع عائد بيئى واقتصادى على نفس المستوى 
                 <br>
@@ -57,7 +59,7 @@
             
 
 
-
+                <center><img src="c9.jpg" alt=""></center>
 
 </div>      
 </body>
