--- a/Sustainable development.html
+++ b/Sustainable development.html
@@ -61,14 +61,9 @@
                النقاط الى مصروفات دراسيه او خدمات كهرباء ومياه وخلافه وكذلك شركات
                مع الهايبر ماركت الكبير والصغير لاستبدال النقاط بكوبونات للشراء
 </p>
-
-
-
-
-
-
-
-
+<center>
+  <img src="c7.jpg">
+</center>
 
 
 
